--- a/AsyncTest/MainWindow.xaml
+++ b/AsyncTest/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Button Content="Normal Execution&#xD;&#xA;" HorizontalAlignment="Left" Margin="150,10,0,0" VerticalAlignment="Top" Height="41" Width="489" Click="NormalExec_Click"/>
         <Button Content="Async Execution&#xD;&#xA;" HorizontalAlignment="Left" Margin="150,87,0,0" VerticalAlignment="Top" Height="49" Width="489" Click="AsyncExec_Click"/>
-        <TextBox HorizontalAlignment="Left" Margin="150,167,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="489" Height="143"/>
+        <TextBox x:Name="resultWindow" HorizontalAlignment="Left" Margin="150,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="489" Height="143"/>
 
     </Grid>
 </Window>
