--- a/AsyncTest/MainWindow.xaml
+++ b/AsyncTest/MainWindow.xaml
@@ -11,7 +11,7 @@
         <Button Content="Async Execution&#xD;&#xA;" HorizontalAlignment="Left" Margin="150,76,0,0" VerticalAlignment="Top" Height="49" Width="489" Click="AsyncExec_Click"/>
         <TextBox x:Name="resultWindow" HorizontalAlignment="Left" Margin="150,301,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="489" Height="143"/>
         <TextBox x:Name="ThreadNumTextBox" HorizontalAlignment="Center" Margin="0,481,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="478" Height="60"/>
-        <ProgressBar HorizontalAlignment="Left" Height="21" Margin="150,263,0,0" VerticalAlignment="Top" Width="489"/>
+        <ProgressBar x:Name="dashboardprogress" HorizontalAlignment="Left" Height="21" Margin="150,263,0,0" VerticalAlignment="Top" Width="489"/>
         <Button Content="Prallel Async Execution" HorizontalAlignment="Left" Margin="150,141,0,0" VerticalAlignment="Top" Width="489" Height="38" Click="ParallelExecuteAsync_Click"/>
         <Button Content="Cancle" HorizontalAlignment="Left" Margin="150,198,0,0" VerticalAlignment="Top" Width="489" Height="48"/>
 
