--- a/WPFTest1/MainWindow.xaml
+++ b/WPFTest1/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFTest1"
+        xmlns:local="clr-namespace:WPFTest1" 
+        xmlns:local1="clr-namespace:WPFTest1.UserControls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <!--<StackPanel HorizontalAlignment="Left" VerticalAlignment="center">
@@ -32,8 +33,19 @@
     </StackPanel>-->
 
     <Grid>
-        <TextBlock Name="textblock1" Text="iam animated text block using event triggers" FontSize="18" HorizontalAlignment="center" VerticalAlignment="Center">
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Grid.Column="0" Name="textblock1" Text="iam animated text block using event triggers" FontSize="18" HorizontalAlignment="center" VerticalAlignment="Center">
             <TextBlock.Style>
                 <Style TargetType="TextBlock">
                     <Style.Triggers>
@@ -59,6 +71,9 @@
                 </Style>
             </TextBlock.Style>
         </TextBlock>
+
+        <local1:DependencyProperty Grid.Row="1" Grid.Column="1"/>
+        <local1:DataBindingModes Grid.Row="2" Grid.Column="1"/>
     </Grid>
 
 </Window>
